# Embedded-Predictive-Maintenance

./: .gitignore  CMakeLists.txt  README.md  prj.conf
include/: machines.h  sensor.h  sensor_wrapper.h  shared_resources.h  threads.h
include/core/: circular_buffer.h
include/machines/: sensor.h  wrapper.h
include/threads/: threads.h
include/utils/: demo.h
src/: machine.c  machines.c  main.c  sensor.cpp  sensor_wrapper.cpp  threads.c
src/core/: circular_buffer.c
src/machines/: sensor.cpp  wrapper.cpp
src/threads/: thread_anomaly_detect.c  thread_anomaly_handle.c  thread_sensor_read.c  thread_sensor_write.c  thread_system_logger.c
src/utils/: demo.cpp
